# MedCrab

./: README.md  main.py  pdf_translator.py  pyproject.toml
.gradio/flagged/: dataset1.csv
medcrab/: __init__.py  medcrab.py
test/: input.txt  output.txt
